examples/invalid/semanticErr/if/ifIntCondition.wacc
# if condition type mismatch
# Output:
# #semantic error#

#Program:#

begin
  if 15 + 6 then 
    skip 
  else 
    skip
  fi
end
